--- a/style.css
+++ b/style.css
@@ -22,21 +22,19 @@ body {
 
 .menu {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-    justify-content: center;
     align-items: center;
     align-content: center;
 }
 
 li {
     list-style: none;
-    margin: 1rem;
+    padding: 1rem;
     text-align: center;
+    font-size: 1.2rem; 
     flex-grow: 1;
-    font-size: 1.2rem;    
 
 }
 
@@ -48,11 +46,17 @@ ul a {
 
 .superapka {
     text-transform: uppercase;
+    font-weight: bold;
+}
+
+.menu li:hover, 
+.menu li:focus {
+    background-color: #48418e;
 }
 
 .menu a:hover, 
 .menu a:focus {
-    font-weight: bold;
+    color:white;
 }
 
 
@@ -113,7 +117,7 @@ div a {
 }
 
 .obrazek {
-    visibility: hidden;
+    display: none;    
 }
 
 /* obsah */
@@ -132,14 +136,13 @@ div a {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 1rem 0 0;
+    padding: 1rem;
     max-width: 500px;
     justify-content: center;
+    flex-basis: calc (100%/3);
 }
 
-.dobrodruzstvi {
-    margin: 0 0 2rem;
-}
+
 
 h2 {
     color: #48418e;
@@ -165,6 +168,8 @@ h2 {
     align-items: center;
     justify-content: center;
 }
+
+
 
 
  /* medium size display */
@@ -227,7 +232,7 @@ h2 {
     }
 
     .sluzby {
-        padding: 1rem;
+        padding: 1rem 2rem;
     }
 
     .logo {
@@ -241,7 +246,7 @@ h2 {
 
 /* large size display */
 
-@media (min-width:901px) {
+@media (min-width:966px) {
 
     body {
         min-width: 901px;
@@ -249,14 +254,22 @@ h2 {
     }
 
     .obrazek {
-        visibility: visible;
+        display: block;
         z-index: 9999;
-        width: 300px;
-        height: 300px; 
+        height: 400px;
+        padding-left: 5rem;
     }
 
     .hlavicka {
         flex-direction: row;
         justify-content: space-between;
+    }
+
+
+}
+
+@media (min-width: 1270px) {
+    .tlacitka {
+        margin-top: 2rem;
     }
 }
